Fix alignment issue of öv switch legend in the event list filter component

--- a/src/Resources/contao/files/theme-sac-pilatus/scss/components/_event_filter_board.scss
+++ b/src/Resources/contao/files/theme-sac-pilatus/scss/components/_event_filter_board.scss
@@ -78,7 +78,7 @@
 
     .form-check.form-switch {
       display: flex;
-      align-items: center;
+      align-items: flex-start;
       padding: 0;
     }
 
@@ -86,6 +86,10 @@
       border-radius: 2em;
     }
 
+    .form-check.form-switch > label {
+      margin-bottom: 0 !important;
+      line-height: 1;
+    }
 
     .form-switch .form-check-input {
       background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgba%280, 0, 0, 0.99%29'/%3e%3c/svg%3e");
